# AwesomeSnake

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: snake.hpp  utils.hpp
include/snake/: snake.hpp  snakebase.hpp  snakeclient.hpp  snakeserver.hpp
lib/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-system.so.2.5.1  libsfml-window.so.2.5.1
source/: client.cpp  server.cpp  snake.cpp  snakeclient.cpp  snakeserver.cpp
source/snake/: snake.cpp  snakebase.cpp  snakeclient.cpp  snakeserver.cpp
testingfeatures/: client  client.cpp  main  main.cpp  mser  mtsv2.cpp  multhreadserver.cpp  server  server.cpp  snake  t  t1.cpp
tmp/: CMakeCache.txt  Makefile  cmake_install.cmake
